--- a/index.html
+++ b/index.html
@@ -1,14 +1,196 @@
 <!doctype html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Tailwind CSS (CDN classique) -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Styles additionnels (optionnels) -->
     <link href="src/style.css" rel="stylesheet">
-    <title>Hello World</title>
+    <title>Candidapp</title>
 </head>
-<body>
-<h1 class="text-3xl font-bold underline">
-    Hello world!
-</h1>
+
+<body class="bg-gradient-to-br from-[#003366] to-[#007BFF] min-h-screen">
+    <!-- Header -->
+    <header class="flex items-center justify-between px-6 py-4 bg-white shadow-sm">
+        <div class="flex items-center gap-3">
+            <div class="w-10 h-10 bg-[#003366] rounded-lg flex items-center justify-center">
+                <!-- GraduationCap icon -->
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="white"
+                    stroke-width="1.5" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M3 10l9-4 9 4-9 4-9-4zm0 0v6a9 9 0 009 4 9 9 0 009-4v-6" />
+                </svg>
+            </div>
+            <span class="text-gray-800 font-medium">Candidapp</span>
+        </div>
+        <a href="#login"
+            class="bg-[#007BFF] hover:bg-[#0056b3] text-white font-semibold px-4 py-2 rounded">Connexion</a>
+    </header>
+
+    <!-- Login Page -->
+    <main id="login" class="min-h-[calc(100vh-64px)] flex items-center justify-center p-6">
+        <div class="w-full max-w-md bg-white rounded-xl shadow-lg p-8">
+            <button id="backBtn" class="flex items-center text-gray-600 hover:text-gray-800 mb-6">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                    stroke-width="1.5" class="w-4 h-4 mr-2">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
+                </svg>
+                Retour
+            </button>
+
+            <div class="flex items-center justify-center gap-3 mb-8">
+                <div class="w-12 h-12 bg-[#003366] rounded-lg flex items-center justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="white"
+                        stroke-width="1.5" class="w-7 h-7">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M3 10l9-4 9 4-9 4-9-4zm0 0v6a9 9 0 009 4 9 9 0 009-4v-6" />
+                    </svg>
+                </div>
+                <span class="text-[#1C1C1C] text-lg">Candidapp</span>
+            </div>
+
+            <h2 class="text-center text-xl font-semibold text-[#1C1C1C] mb-2">Connexion</h2>
+            <p class="text-center text-gray-600 mb-6">Accédez à votre espace personnel</p>
+
+            <!-- Demo accounts info -->
+            <div class="mb-6 p-4 bg-blue-50 border border-blue-200 rounded-lg">
+                <div class="flex items-start gap-2 mb-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="#2563eb"
+                        stroke-width="1.5" class="w-5 h-5 mt-0.5 flex-shrink-0">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M13 16h-1v-4h-1m1-4h.01M12 2a10 10 0 100 20 10 10 0 000-20z" />
+                    </svg>
+                    <div>
+                        <p class="text-blue-800 mb-2">Comptes de démonstration</p>
+                        <p class="text-blue-700 mb-3">Mot de passe pour tous : <span
+                                class="bg-blue-100 px-2 py-1 rounded font-mono">demo123</span></p>
+                    </div>
+                </div>
+                <div class="grid grid-cols-2 gap-2">
+                    <!-- Ici les utilisateurs doivent sélectionner leur rôle la sélection doit être sélectionnée et la sélection doit-être retenue jusqu'à l'envoie du formulaire -->
+                    <button id="roleStudent" type="button" class="border rounded px-2 py-1 text-sm text-left"
+                        aria-pressed="false">👨‍🎓
+                        Étudiant</button>
+                    <button id="roleCompany" type="button" class="border rounded px-2 py-1 text-sm text-left"
+                        aria-pressed="false">🏢
+                        Entreprise</button>
+                    <button id="roleTeacher" type="button" class="border rounded px-2 py-1 text-sm text-left"
+                        aria-pressed="false">👨‍🏫
+                        Enseignant</button>
+                    <button id="roleSecretary" type="button" class="border rounded px-2 py-1 text-sm text-left"
+                        aria-pressed="false">📝
+                        Secrétaire</button>
+                    <button id="roleAdmin" type="button" class="border rounded px-2 py-1 text-sm text-left col-span-2"
+                        aria-pressed="false">🛡️ Administrateur</button>
+                </div>
+            </div>
+            <!-- Le sélecteur de rôle est géré par les boutons ci-dessus; la valeur est conservée jusqu'à l'envoi. -->
+            <form id="loginForm" class="space-y-4">
+                <!-- champ caché pour mémoriser le rôle sélectionné -->
+                <input type="hidden" id="roleHidden" name="role" value="" />
+
+                <div class="space-y-2">
+                    <label for="email" class="text-sm text-gray-700">Email</label>
+                    <div class="relative">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="#9ca3af"
+                            stroke-width="1.5" class="absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M15.75 7.5l-3.75 3.75L8.25 7.5m0 0h7.5m-7.5 0A2.25 2.25 0 006 9.75v4.5A2.25 2.25 0 008.25 16.5h7.5A2.25 2.25 0 0018 14.25v-4.5A2.25 2.25 0 0015.75 7.5z" />
+                        </svg>
+                        <input id="email" type="email" placeholder="votre.email@exemple.fr"
+                            class="w-full border rounded px-3 py-2 pl-10" required />
+                    </div>
+                </div>
+
+                <div class="space-y-2">
+                    <label for="password" class="text-sm text-gray-700">Mot de passe</label>
+                    <div class="relative">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="#9ca3af"
+                            stroke-width="1.5" class="absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2h-1V9a5 5 0 10-10 0v2H6a2 2 0 00-2 2v6a2 2 0 002 2z" />
+                        </svg>
+                        <input id="password" type="password" placeholder="••••••••"
+                            class="w-full border rounded px-3 py-2 pl-10" required />
+                    </div>
+                </div>
+
+                <button type="submit"
+                    class="w-full bg-[#007BFF] hover:bg-[#0056b3] text-white font-semibold py-2 rounded">Se
+                    connecter</button>
+            </form>
+
+            <div class="mt-6 text-center">
+                <a href="#" class="text-[#007BFF] hover:underline">Mot de passe oublié ?</a>
+            </div>
+
+            <div class="mt-6 pt-6 border-t border-gray-200 text-center text-gray-600">
+                <p class="mb-2">Nouveau sur la plateforme ?</p>
+                <button class="w-full border rounded px-3 py-2">Inscription entreprise</button>
+            </div>
+        </div>
+    </main>
+    <script>
+        // Démo comptes comme dans la maquette
+        const demo = {
+            student: { email: 'jean.dupont@univ.fr', password: 'demo123' },
+            company: { email: 'contact@techcorp.fr', password: 'demo123' },
+            teacher: { email: 'p.dupont@univ.fr', password: 'demo123' },
+            secretary: { email: 'c.martin@univ.fr', password: 'demo123' },
+            admin: { email: 'admin@univ.fr', password: 'demo123' }
+        };
+
+        const roleHidden = document.getElementById('roleHidden');
+        const emailInput = document.getElementById('email');
+        const passwordInput = document.getElementById('password');
+        const form = document.getElementById('loginForm');
+        const roleButtons = [
+            { id: 'roleStudent', value: 'student' },
+            { id: 'roleCompany', value: 'company' },
+            { id: 'roleTeacher', value: 'teacher' },
+            { id: 'roleSecretary', value: 'secretary' },
+            { id: 'roleAdmin', value: 'admin' }
+        ];
+
+        function setActiveRole(role) {
+            // visual feedback + aria state
+            roleButtons.forEach(rb => {
+                const el = document.getElementById(rb.id);
+                const active = rb.value === role;
+                el.setAttribute('aria-pressed', active ? 'true' : 'false');
+                el.classList.toggle('border-blue-500', active);
+                el.classList.toggle('bg-blue-50', active);
+            });
+        }
+
+        function fillDemo(role) {
+            roleHidden.value = role;
+            const acc = demo[role];
+            setActiveRole(role);
+        }
+
+        roleButtons.forEach(rb => {
+            document.getElementById(rb.id).addEventListener('click', () => fillDemo(rb.value));
+        });
+
+        form.addEventListener('submit', (e) => {
+            e.preventDefault();
+            const role = roleHidden.value;
+            if (!role) return;
+            // Redirection simple selon le rôle
+            const map = {
+                student: 'student.html',
+                company: 'company.html',
+                teacher: 'teacher.html',
+                secretary: 'secretary.html',
+                admin: 'admin.html'
+            };
+            const target = map[role];
+            if (target) window.location.href = target;
+        });
+    </script>
 </body>
+
 </html>
