--- a/frontend/candidatures.html
+++ b/frontend/candidatures.html
@@ -218,12 +218,10 @@
                     return;
                 }
 
-                const response = await fetch('/api/candidatures/annuler', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ candidature_id: candidatureId, userId: user.id })
+                const response = await fetch(`/api/candidatures/${candidatureId}/annuler`, {
+                    method: 'PATCH',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ userId: user.id, role: user.role })
                 });
 
                 const data = await response.json();
@@ -289,7 +287,7 @@
             }
 
             try {
-                const response = await fetch('/api/mes-candidatures', {
+                const response = await fetch('/api/candidatures/me', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ userId: user.id, role: user.role })
