Fix dashboard entreprise + vues + attestations RC secrétaire

--- a/frontend/dashboard-secretaire.html
+++ b/frontend/dashboard-secretaire.html
@@ -251,100 +251,15 @@
                     <div class="px-6 py-4 border-b border-gray-200">
                         <h3 class="text-lg font-semibold text-gray-900">RC en attente de validation</h3>
                     </div>
-                    <div class="divide-y divide-gray-200">
-                        <!-- RC Item 1 (Mock Data) -->
-                        <div class="px-6 py-4 flex items-center justify-between hover:bg-gray-50 transition">
-                            <div class="flex items-center space-x-4 flex-1">
-                                <div class="w-10 h-10 bg-blue-100 rounded-full flex items-center justify-center">
-                                    <span class="text-blue-600 font-semibold text-sm">JD</span>
-                                </div>
-                                <div class="flex-1">
-                                    <h4 class="text-sm font-medium text-gray-900">Jean Dupont</h4>
-                                    <p class="text-xs text-gray-500">Promo 2025 • Soumis le 28/12/2025</p>
-                                </div>
-                                <div class="flex items-center space-x-2">
-                                    <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor"
-                                        viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z" />
-                                    </svg>
-                                    <span class="text-sm text-gray-600">attestation_rc.pdf</span>
-                                </div>
-                            </div>
-                            <div class="flex items-center space-x-2 ml-4">
-                                <button
-                                    class="px-4 py-2 bg-green-600 hover:bg-green-700 text-white text-sm rounded-lg transition">
-                                    Valider
-                                </button>
-                                <button
-                                    class="px-4 py-2 bg-red-600 hover:bg-red-700 text-white text-sm rounded-lg transition">
-                                    Refuser
-                                </button>
-                            </div>
-                        </div>
+                    <div class="divide-y divide-gray-200" id="rcList"></div>
 
-                        <!-- RC Item 2 (Mock Data) -->
-                        <div class="px-6 py-4 flex items-center justify-between hover:bg-gray-50 transition">
-                            <div class="flex items-center space-x-4 flex-1">
-                                <div class="w-10 h-10 bg-purple-100 rounded-full flex items-center justify-center">
-                                    <span class="text-purple-600 font-semibold text-sm">ML</span>
-                                </div>
-                                <div class="flex-1">
-                                    <h4 class="text-sm font-medium text-gray-900">Marie Leclerc</h4>
-                                    <p class="text-xs text-gray-500">Promo 2025 • Soumis le 29/12/2025</p>
-                                </div>
-                                <div class="flex items-center space-x-2">
-                                    <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor"
-                                        viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z" />
-                                    </svg>
-                                    <span class="text-sm text-gray-600">rc_entreprise.pdf</span>
-                                </div>
-                            </div>
-                            <div class="flex items-center space-x-2 ml-4">
-                                <button
-                                    class="px-4 py-2 bg-green-600 hover:bg-green-700 text-white text-sm rounded-lg transition">
-                                    Valider
-                                </button>
-                                <button
-                                    class="px-4 py-2 bg-red-600 hover:bg-red-700 text-white text-sm rounded-lg transition">
-                                    Refuser
-                                </button>
-                            </div>
-                        </div>
-
-                        <!-- RC Item 3 (Mock Data) -->
-                        <div class="px-6 py-4 flex items-center justify-between hover:bg-gray-50 transition">
-                            <div class="flex items-center space-x-4 flex-1">
-                                <div class="w-10 h-10 bg-green-100 rounded-full flex items-center justify-center">
-                                    <span class="text-green-600 font-semibold text-sm">AM</span>
-                                </div>
-                                <div class="flex-1">
-                                    <h4 class="text-sm font-medium text-gray-900">Antoine Martin</h4>
-                                    <p class="text-xs text-gray-500">Promo 2024 • Soumis le 30/12/2025</p>
-                                </div>
-                                <div class="flex items-center space-x-2">
-                                    <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor"
-                                        viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z" />
-                                    </svg>
-                                    <span class="text-sm text-gray-600">justificatif_stage.pdf</span>
-                                </div>
-                            </div>
-                            <div class="flex items-center space-x-2 ml-4">
-                                <button
-                                    class="px-4 py-2 bg-green-600 hover:bg-green-700 text-white text-sm rounded-lg transition">
-                                    Valider
-                                </button>
-                                <button
-                                    class="px-4 py-2 bg-red-600 hover:bg-red-700 text-white text-sm rounded-lg transition">
-                                    Refuser
-                                </button>
-                            </div>
-                        </div>
+                    <div id="rcLoading" class="px-6 py-6 text-sm text-gray-500">
+                        Chargement des attestations...
                     </div>
+                    <div id="rcEmpty" class="hidden px-6 py-6 text-sm text-gray-500">
+                        Aucune attestation RC en attente.
+                    </div>
+
                 </div>
 
                 <!-- RC expirées - Action requise -->
@@ -394,43 +309,210 @@
     </div>
 
     <script>
-        // ==================== CHARGEMENT INITIAL ====================
-        window.addEventListener('DOMContentLoaded', () => {
-            loadStats();
-            setupEventListeners();
+    // ==================== SESSION ====================
+    const user = JSON.parse(sessionStorage.getItem("user") || "null");
+    if (!user || !user.id) window.location.href = "/login.html";
+    const userId = user.id;
+
+    // ==================== CHARGEMENT INITIAL ====================
+    window.addEventListener('DOMContentLoaded', () => {
+        loadStats();
+        loadAttestations();
+        setupEventListeners();
+    });
+
+    function setupEventListeners() {
+        document.getElementById('logoutBtn').addEventListener('click', () => {
+        sessionStorage.clear();
+        window.location.href = '/login.html';
+        });
+    }
+
+    // ==================== CHARGEMENT DES STATS ====================
+    async function loadStats() {
+        try {
+        const response = await fetch('/api/dashboard/secretaire/stats');
+        const data = await response.json();
+        if (!data.ok) return;
+
+        const stats = data.stats;
+        document.getElementById('statEtudiants').textContent = stats.nb_etudiants_total || 0;
+        document.getElementById('statRC').textContent = stats.nb_attestations_a_valider || 0;
+        document.getElementById('statRecherche').textContent = stats.nb_etudiants_en_recherche || 0;
+        document.getElementById('statEntreprises').textContent = stats.nb_entreprises_partenaires || 0;
+        } catch (error) {
+        console.error('Erreur stats:', error);
+        }
+    }
+
+    // ==================== RC : LISTE ====================
+    async function loadAttestations() {
+        const loading = document.getElementById("rcLoading");
+        const empty = document.getElementById("rcEmpty");
+        const list = document.getElementById("rcList");
+
+        loading.classList.remove("hidden");
+        empty.classList.add("hidden");
+        list.innerHTML = "";
+
+        try {
+        const res = await fetch(`/api/dashboard/secretaire/attestations?userId=${userId}`);
+        const data = await res.json();
+
+        loading.classList.add("hidden");
+
+        if (!data.ok) {
+            console.error(data.error || "Erreur chargement attestations");
+            empty.textContent = "Erreur lors du chargement des attestations.";
+            empty.classList.remove("hidden");
+            return;
+        }
+
+        const attestations = data.attestations || [];
+        if (attestations.length === 0) {
+            empty.classList.remove("hidden");
+            return;
+        }
+
+        attestations.forEach(a => {
+            list.appendChild(renderAttestationRow(a));
         });
 
-        function setupEventListeners() {
-            // Déconnexion
-            document.getElementById('logoutBtn').addEventListener('click', () => {
-                sessionStorage.clear();
-                window.location.href = '/login.html';
-            });
+        // Mettre à jour badge menu (optionnel)
+        // document.querySelector(".menu-item span.ml-auto")?.textContent = attestations.length;
+
+        } catch (e) {
+        loading.classList.add("hidden");
+        empty.textContent = "Erreur technique lors du chargement.";
+        empty.classList.remove("hidden");
+        console.error(e);
+        }
+    }
+
+    function renderAttestationRow(a) {
+        // champs attendus depuis v_attestations_rc_a_valider :
+        // etudiant_id, nom, prenom, promo, fichier_url, date_depot, statut ...
+        const etudiantId = a.etudiant_id;
+        const nom = `${a.prenom || ''} ${a.nom || ''}`.trim() || `Étudiant #${etudiantId}`;
+        const promo = a.promo ? `Promo ${a.promo}` : '';
+        const dateDepot = a.date_depot ? new Date(a.date_depot).toLocaleDateString('fr-FR') : '—';
+        const fichier = a.fichier_url ? shortFileName(a.fichier_url) : 'fichier indisponible';
+        const initials = getInitials(a.prenom, a.nom);
+
+        const row = document.createElement("div");
+        row.className = "px-6 py-4 flex items-center justify-between hover:bg-gray-50 transition";
+
+        row.innerHTML = `
+        <div class="flex items-center space-x-4 flex-1">
+            <div class="w-10 h-10 bg-blue-100 rounded-full flex items-center justify-center">
+            <span class="text-blue-600 font-semibold text-sm">${initials}</span>
+            </div>
+            <div class="flex-1">
+            <h4 class="text-sm font-medium text-gray-900">${escapeHtml(nom)}</h4>
+            <p class="text-xs text-gray-500">${escapeHtml(promo)} • Soumis le ${escapeHtml(dateDepot)}</p>
+            </div>
+            <div class="flex items-center space-x-2">
+            <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z" />
+            </svg>
+            <span class="text-sm text-gray-600">${escapeHtml(fichier)}</span>
+            </div>
+        </div>
+
+        <div class="flex items-center space-x-2 ml-4">
+            <button data-action="valider" class="px-4 py-2 bg-green-600 hover:bg-green-700 text-white text-sm rounded-lg transition">
+            Valider
+            </button>
+            <button data-action="refuser" class="px-4 py-2 bg-red-600 hover:bg-red-700 text-white text-sm rounded-lg transition">
+            Refuser
+            </button>
+        </div>
+        `;
+
+        // Handlers boutons
+        row.querySelector('[data-action="valider"]').addEventListener("click", () => onValider(etudiantId));
+        row.querySelector('[data-action="refuser"]').addEventListener("click", () => onRefuser(etudiantId));
+
+        return row;
+    }
+
+    // ==================== RC : ACTIONS ====================
+    async function onValider(etudiantId) {
+        if (!confirm("Valider cette attestation RC ?")) return;
+
+        try {
+        const res = await fetch(`/api/dashboard/secretaire/attestations/${etudiantId}/valider?userId=${userId}`, {
+            method: "POST"
+        });
+        const data = await res.json();
+
+        if (!data.ok) {
+            alert(data.error || "Erreur validation");
+            return;
         }
 
-        // ==================== CHARGEMENT DES STATS ====================
-        async function loadStats() {
-            try {
-                const response = await fetch('/api/dashboard/secretaire/stats');
-                const data = await response.json();
-
-                if (!data.ok) {
-                    console.error('Erreur lors du chargement des stats');
-                    return;
-                }
-
-                const stats = data.stats;
-
-                // Mise à jour des cartes
-                document.getElementById('statEtudiants').textContent = stats.nb_etudiants_total || 0;
-                document.getElementById('statRC').textContent = stats.nb_attestations_a_valider || 0;
-                document.getElementById('statRecherche').textContent = stats.nb_etudiants_en_recherche || 0;
-                document.getElementById('statEntreprises').textContent = stats.nb_entreprises_partenaires || 0;
-
-            } catch (error) {
-                console.error('Erreur technique:', error);
-            }
+        // refresh
+        await loadStats();
+        await loadAttestations();
+        } catch (e) {
+        console.error(e);
+        alert("Erreur technique validation");
         }
+    }
+
+    async function onRefuser(etudiantId) {
+        const motif = prompt("Motif de refus (optionnel) :", "");
+        if (motif === null) return; // annuler
+
+        try {
+        const res = await fetch(`/api/dashboard/secretaire/attestations/${etudiantId}/refuser?userId=${userId}`, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ motif_refus: motif || null })
+        });
+        const data = await res.json();
+
+        if (!data.ok) {
+            alert(data.error || "Erreur refus");
+            return;
+        }
+
+        // refresh
+        await loadStats();
+        await loadAttestations();
+        } catch (e) {
+        console.error(e);
+        alert("Erreur technique refus");
+        }
+    }
+
+    // ==================== HELPERS ====================
+    function getInitials(prenom, nom) {
+        const p = (prenom || "").trim();
+        const n = (nom || "").trim();
+        return ((p[0] || '') + (n[0] || '')).toUpperCase() || "??";
+    }
+
+    function shortFileName(url) {
+        try {
+        // si c'est un dataURL, juste afficher "PDF"
+        if (typeof url === "string" && url.startsWith("data:")) return "attestation_rc.pdf";
+        const parts = String(url).split("/");
+        return parts[parts.length - 1] || "attestation_rc.pdf";
+        } catch {
+        return "attestation_rc.pdf";
+        }
+    }
+
+    function escapeHtml(str) {
+        return String(str ?? "")
+        .replace(/&/g, "&amp;")
+        .replace(/</g, "&lt;")
+        .replace(/>/g, "&gt;")
+        .replace(/"/g, "&quot;")
+        .replace(/'/g, "&#039;");
+    }
     </script>
 
 </body>
